test/scc_test/decl/semantic-errors/052.a
052.t:1:10: error: incomplete type is not allowed